# task_manager

./: .gitignore  README.MD  pyproject.toml  task_manager.db  test_task_manager.db
app/: main.py
app/database/: db.py
app/exceptions/: task_exceptions.py
app/models/: task_model.py
app/routers/: tasks.py
app/schemas/: tasks_schemas.py
app/services/: task_service.py
tests/: conftest.py  task_manager.db  test_tasks.py
